syntax = "proto3";

package blockchain;

// Signed raw transaction
message Transaction {
  bytes signature = 1;
  bytes from = 5;
  oneof payload {
    Decryption decryption = 2;
    Reencryption reencryption = 3;
    SetConfig set_config = 4;
  }
}

// Raw transaction
message RawTransaction {
    uint64 nonce = 1;
    uint64 gas_price = 2;
    uint64 gas_limit = 3;
    optional bytes to = 4;
    uint64 value = 6;
}

// Decryption request transaction
message Decryption {
  RawTransaction raw = 1;
  // The ciphertext to decrypt, taken directly from the fhevm.
  bytes ciphertext = 2;
}

// Reencryption request transaction
message Reencryption {
  RawTransaction raw = 1;
  // The ciphertext to reencrypt, taken directly from the fhevm.
  bytes ciphertext = 2;
}

message SetConfig {
  RawTransaction raw = 1;
  string key = 2;
  string value = 3;
}
